--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -17,6 +17,13 @@
         <mainClassName>com.ribs.logger.Logger</mainClassName>
     </properties>
 
-    <dependencies></dependencies>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
